# blog-backend

./: .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  README.md  Rocket.toml
migrations/2021-02-12-173056_posts/: up.sql
migrations/2021-02-12-173607_users/: up.sql
src/: db.rs  main.rs  schema.rs
src/posts/: mod.rs  model.rs
src/users/: auth.rs  mod.rs  model.rs
