[package]
name = "blog-backend"
version = "0.1.0"
authors = ["Uxío García Andrade <uxiog21@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_codegen = "0.4.5"
rocket_contrib = "0.4.5"
diesel = { version = "1.4.5", features = ["postgres"] }
dotenv = "0.15.0"
rocket-multipart-form-data = "0.9.5"
serde = { version = "1.0", features = ["derive"] }
r2d2-diesel = "1.0.0"
r2d2 = "0.8.3"
jwt = "0.4.0"
rust-crypto = "0.2"
rustc-serialize = "0.3"